--- a/05.Glance.md
+++ b/05.Glance.md
@@ -91,14 +91,14 @@ Dưới đây là một số thuộc tính phổ biến của image:
 
 # 2 Làm việc với Glance
 
-## 2.1 Làm việc với Glance qua CLI
+## 2.1. Làm việc với Glance qua CLI
 
 - Tạo một image mới
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/05.06.png">
 
 - Liệt kê danh sách image
-- 
+
 <img src="https://github.com/lean15998/Openstack/blob/main/images/05.07.png">
 
 - Show thông tin của một image
@@ -111,39 +111,20 @@ Dưới đây là một số thuộc tính phổ biến của image:
 
 
 
+## 2.2. Làm việc với Dashboard
 
 
+- Tạo một image mới
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/05.10.png">
 
+- Show thông tin của một image
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/05.11.png">
 
+- Xóa một image
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<img src="https://github.com/lean15998/Openstack/blob/main/images/05.12.png">
 
 
 
