--- a/07.Neutron.md
+++ b/07.Neutron.md
@@ -1,6 +1,6 @@
 
 
-# Tổng quan về Neutron
+# 1.Tổng quan về Neutron
 
 ## 1.1 Openstack networking - Neutron
 
@@ -130,3 +130,128 @@ Các dịch vụ Routing
 -   VPNaaS: Virtual Private Network-as-a-Service (VPNaaS), extension của neutron cho VPN
 -   LBaaS: Load-Balancer-as-a-Service (LBaaS), API quy định và cấu hình nên các load balancers, được triển khai dựa trên HAProxy software load balancer.
 -   FWaaS: Firewall-as-a-Service (FWaaS), API thử nghiệm cho phép các nhà cung cấp kiểm thử trên networking của họ.
+
+
+# 2. Làm việc với Neutron
+
+# 3. Tìm hiểu Namepsace , DHCP, Agent trong OPS
+
+## 3.1. Overlapping network trong OPS
+
+-  Overlapping được hiểu là một mạng máy tính được xây dựng trên một nền tảng network mạng sẵn
+-  Openstack cung cấp môi trường Multi Tenant . Mỗi tenant cung cấp một mạng prviate , router, firewall , loadblancer riêng . Nhờ namepsace cung cấp khả năng tách biết các tài nguyên mạng giữa các tenant - network namespace
+- Để xem được namepsace có thể sử dụng 
+```bash
+[root@controller nova]# ip netns list
+qrouter-32fe6f32-5bb6-4a89-a24f-df34124e8c76 (id: 2)
+qdhcp-355f6ca6-15f7-4121-a82b-6ee6f4d5fea3 (id: 0)
+[root@controller nova]# 
+```
+- Các namespace hiển thị dưới dạng 
+	-   qdhcp-*
+	-   qrouter-*
+	-   qlbaas-*
+- Để thực hiện một comman trên một namespace có thể sử dụng
+```
+[root@controller nova]# ip netns exec qrouter-32fe6f32-5bb6-4a89-a24f-df34124e8c76 ping 1.1.1.1
+PING 1.1.1.1 (1.1.1.1) 56(84) bytes of data.
+64 bytes from 1.1.1.1: icmp_seq=1 ttl=57 time=37.3 ms
+64 bytes from 1.1.1.1: icmp_seq=2 ttl=57 time=37.7 ms
+64 bytes from 1.1.1.1: icmp_seq=3 ttl=57 time=38.3 ms
+64 bytes from 1.1.1.1: icmp_seq=4 ttl=57 time=38.8 ms
+64 bytes from 1.1.1.1: icmp_seq=5 ttl=57 time=37.4 ms
+^C
+--- 1.1.1.1 ping statistics ---
+5 packets transmitted, 5 received, 0% packet loss, time 4001ms
+rtt min/avg/max/mdev = 37.317/37.923/38.822/0.601 ms
+
+```
+Như vậy router đã tạo từ trước, gắn network `net_ex` đã có thể giao tiếp với internet
+
+
+- Khi một namespace khởi tạo , neutron cũng khởi tạo đồng thời một DHCP and routing service cho từng network riêng biệt. 
+- Namespace qdhcp chứa DHCP Service cung cấp địa chỉ IP cho các instance sử dụng DHCP Protocol . Trong quá thực hiện, ``dnsmasq`` đảm nhiệm xử lý các DHCP Request . qdhcp namespace như một host ảo, được cắm vào một interface trong virtual switch, do đó sẽ có khả năng kết nối với các instance đã được gắn vào network nào đó.  
+- Namesapce qrouter như một router ảo , và đảm nhiệm routing từ các instance được gắn vào network . Router được gắn vào các network khác nhau có thể routing giữa các mạng2
+
+
+
+
+## 3.2. Neutron Agent
+
+
+
+
+- Một agent trong neutron đảm nhiệm các nhiệm vụ khác nhau để tác động tới các mạng ảo . Trong neutron gồm các agent cơ bản sau : neutron-dhcp-agent, neutron-l3-agent, neutron-metering-agent, and neutron-lbaas-agent,
+- Các agent cơ bản khi khi triển khai ` self-service network`
+```
+[root@controller nova]# openstack network agent list
++--------------------------------------+--------------------+------------+-------------------+-------+-------+---------------------------+
+| ID                                   | Agent Type         | Host       | Availability Zone | Alive | State | Binary                    |
++--------------------------------------+--------------------+------------+-------------------+-------+-------+---------------------------+
+| b68cd06e-384f-47d7-88e4-dd5a6a85796c | Linux bridge agent | compute1   | None              | :-)   | UP    | neutron-linuxbridge-agent |
+| c4eb82a1-d86a-4eb8-a230-f62b567d4df8 | DHCP agent         | controller | nova              | :-)   | UP    | neutron-dhcp-agent        |
+| ce13fbcc-e0e6-4b55-87cd-7bdfe58ce357 | L3 agent           | controller | nova              | :-)   | UP    | neutron-l3-agent          |
+| e2279058-9cad-4e05-801d-51a8f16b6850 | Metadata agent     | controller | None              | :-)   | UP    | neutron-metadata-agent    |
+| f7fc3ab5-35c5-4968-a349-79ba6820d25a | Linux bridge agent | controller | None              | :-)   | UP    | neutron-linuxbridge-agent |
++--------------------------------------+--------------------+------------+-------------------+-------+-------+---------------------------+
+``` 
+
+### 3.2.1 : ML2 plugin , agent 
+
+- Modular Layer 2 (ml2) cung cấp một framework cho phép neutron tương tác với các hạ tầng Layer 2 hiện đang có trong các DC. Ml2 framework gồm có 2 driver riêng biệt
+	- Type driver : giúp neutron xác đinh được công nghệ sử dụng : Ví dụ như VLAN . Với mỗi kiểu network được quản lý bởi ML2 Type Driver , xác định trạng thái mạng cụ thể và chịu trách nhiệm cho các segment layer 2
+	- Mechanism drivers : giúp neutron xác định rõ ràng các làm việc với một loại mạng cụ thể . Type driver cung cấp mạng quản lý sau đó  Mechanism driver sẽ đến các device ở ngoài để làm việc với một mạng nào đó . 
+
+  <img src="https://github.com/lean15998/Openstack/blob/main/images/07.03.png">
+	
+- L2 agent serves phục vụ khả năng làm việc với Layer 2. Thường năm trên Network Node và trên mỗi Compute Node 
+
+### 3.2.2 : L3 Agent 
+- Cung cấp khả năng làm việc với các dịch vụ Layer 3 :  virtual Routers và Floating IP
+
+- Yêu cầu có sẵn một L2 Agent 
+
+
+### 3.2.3. DHCP agent
+
+- Đảm nhiệm nhiệm vụ DHCP . 
+- Yêu cầu có sẵn một L2 Agent 
+
+### 3.2.4. Meta Data agent
+
+- Cung cấp khả gửi các cloud init data tới các instance thông tin network
+-  Yêu cầu có sẵn một L2 Agent
+
+  <img src="https://github.com/lean15998/Openstack/blob/main/images/07.04.png">
+
+# 4. Neutron Traffic Flow trong Linux Bridge
+
+# 5. Tìm hiểu VXLAN
+
+# 6. Tìm hiểu OVS trong OPS
+
+# 7. Tìm hiểu flow packet khi sử dụng OpenvSwitch
+
+# 8. Mô hình Provider
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
