--- a/07.Neutron.md
+++ b/07.Neutron.md
@@ -375,11 +375,286 @@ Trên 1 network thì các port của các thiết bị này có chung ID là ID 
 
 # 6. Tìm hiểu OVS trong OPS
 
+## 6.1. OpenvSwtich trong OPS
+
+- Trong OVS gồm các khái niệm sau :
+	- br-init (integration Bridge)  : 2 các VM sử dụng các virtual interface để kết nối đến birdge
+	- br-eth ( ethernet bridge ) : để xác định frame có sử dụng VLAN_ID trước khi chuyển tiếp các frame 
+	- br-tun ( tunnel interface ) : thêm tunnel type vào header
+	- br-ex ( external bridge ) : được sử dụng để kết nối ra các mạng external. mạng external này là mạng ngoài với các mạng đứng sau br-ex, không có nghĩa hoàn toàn là IP Public
+	- veth : sử dụng để kết nối các bridge ( OVS to OVS, LB to OVS ) 2 
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.14.png">
+
+
+## 6.2. OpenVswitch trong Openstack
+
+### 6.2.1 : Môi trường Multi VLAN trên Compute Node
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.15.png">
+
+Trong mô hình trên bao gồm :
+- qbr-ID: một Linux Bridge đứng giữa VM và br-init, bao gồm 2 port : 
+	- port tap - vnet : là TAP-driver, gắn trực tiếp với VM Network Card
+	- port veth -  qvb : cầu nối giữa Linux Bridge và Br_intu
+
+- OVS br-init : gồm có 2 port :
+	- port veth - qvo : cầu nối với Linux Bridge 
+	- port veth : cầu nối với br-external
+
+- OVS br-ex :  gồm 2 port :
+	- port br-eth : cầu nối với br-init
+	- port eth1 : physical interface của compute node
+
+
+### 6.2.2. Mô hình VXLAN - Self Service
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.16.png">
+
+Trong mô hình trên bao gồm :
+
+**Trên Compute Node** : 
+- qbr : Linux Bridge gồm có 2 port
+	- port TAP - vmet : kết nối với VM
+	- port veth - qvb : kết nối với br-int
+
+- br-int : OVS gồm có 2 port
+	- port veth - qvo : kết nối với Linux Bridge - qbr
+	- port veth - patch tun: kết nối với br-tun
+
+- br-tun : OVS gồm có 2 port
+	- port veth - patch-int : kết nối với br-int
+	- port vxlan : kết nối đến overlay network
+
+**Trên Network Node**
+
+- br-tun : OVS gồm có 2 port
+	- port vxvlan : kết nối với overlay nework
+	- br veth - br tun : kết nối đến br init
+
+- br-init : OVS bao gồm 3 port :
+	- port	TAP : kết nối đến namespace DHCP
+	- port qr, qg : kết nối đến namespace Router
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.17.png">
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.18.png">
+
+- br-provider : OVS gồm có 2 port
+	- port veth : kết nối tới router
+	- por ex : kết nối với Physical Interface
+
 # 7. Tìm hiểu flow packet khi sử dụng OpenvSwitch
 
-# 8. Mô hình Provider
+## 7.1. Môi trường giả lập
+
+- Mô hình Bắc - Nam : liên hệ giữa các instance và mạng ngoài ( hạ tầng mạng vật lý )
+- Mô hình Đông - Tây : liên hệ giữa các instance với nhau cùng mạng hoặc khác mạng. 
+- Giả định môi trường mạng như sau :
+	- Provider 	- VLANID 101
+	- Self-service network 1 - VNI 101
+	- Self-service network 2 - VNI 102
+	- Self-service route
+	- instance 1,2 
 
 
+## 7.2. Mô hình Self-Service
+
+### 7.2.1 . Bắc - Nam , sử dụng fixed IP
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.19.png">
+
+- Trên mô hình này, network node sẽ thực hiện thực hiện Source NAT để gửi traffic của các instance ra mạng external
+
+- Trên Compute Node
+
+	- B1 :  Packet từ instance interface ( 1 ) được chuyển tiếp đến veth pair ( 2 ) trên Linux Bridge
+	- B2 : Security group trên Linux Bridge sẽ đảm nhiệm filter (3  )
+	- B3 :  Linux Bridge (4 ) chuyển tiếp các frame đến OVS integration bridge sử dụng veth pair
+	- B5 : Tại đây ( 5 ) integration bridge thêm tag VNI 101, xác định Tunnel ID
+	- B6 : OVS integration bridge veth port ( 6 ) sẽ chuyển các packet đến OVS Tunnel Bridge veth port ( 7 )
+	- B7 : OVS tunnel bridge sẽ đóng gói các packet với VNI 101 ( 8 ) 
+	- B8 : Physical interface ( 9 ) cho phép mạng overlay chuyển tiếp các packet đến network node ( 10 
+
+- Trên Network Node
+	- B1 : Trên physical interface ( 11 ) của network node cho phép các packet từ overlay network đi vào OVS tunnel bridge ( 12 )
+	- B2 : OVS Tunnel sẽ thêm Tunnel ID , và gắn một VLAN ID cho các packet này
+	- B3 : OVS Tunnel veth port ( 13 ) sẽ gửi packet tới OVS integration veth port ( 14 ) 
+	- B4 : OVS integration bridge port ( 15 ) sẽ bỏ các VLAN ID và chuyển tiếp tới router namespace ( 16 ) 
+	- B5 : Đối với IPv4  : SNAT sẽ được thực hiện tại đây , thay đổi địa chỉ IP của self-service network thành IP của provider network ( 17 )
+	- B6 : Router ( 18 ) chuyển tiếp packet OVS integration bridge , sau đó sẽ thêm VLAN ID vào packet 
+	- B7 :  OVS integration bridge patch port ( 19 ) sẽ forward packet tới OVS provider bridge phy-br-provider ( 20 ) 
+	- B8 :  OVS provider  bridge port( 21 ) sẽ forward packet ra physical interface ( 22 )
+	- B9 : Physical interface sẽ gửi packet ra ngoài ( 23 ) 
+
+### 7.2.2 : Bắc - Nam sử dụng Floating IP
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.20.png">
+
+- Sử dụng SNAT để các máy ảo giao tiếp ra ngoài và DNAT để mạng ngoài giao tiếp với instance
+- Trường hợp dưới đây từ một máy từ mạng ngoài liên hệ với instance
+
+- Trên Nodework Node
+
+	- B1 : Từ mạng ngoài ( 1 ) gửi packet vào provider physical interface ( 2 ) 
+	- B2  : Provider physical interface ( 3 ) chuyển tiếp packet đến OVS provider bridge, sau đó sẽ lấy VLAN ID của packet
+	- B3 : OVS provider bridge port ( 4 ) sẽ forward packet sang OVS integration bridge port ( 5 ) 
+	- B5 : OVS integration bridge port ( 6 ) sẽ remove internal VLAN và chuyển packet đến router namepsace. Sau đó thực hiện Destination NAT  ( 7 ) 
+	- B6 : Router ( 8 ) chuyển tiếp các packet sang OVS integration bridge ( 9 ) 
+	- B7 : Tại OVS intergration bridge sẽ thêm các VLAN ID , sau đó sẽ tìm Tunnel ID tương ứng
+	- B8 : OVS intergration bridge ( 10 ) chuyển các packet tới OVS tunnel bridge ( 11 ) 
+	- B9  : OVS tunnel bridge ( 12 ) sử dụng VNI cho header các packet 
+	- B10 : Physical interface sẽ cho phép các overlay network ( 13 ) gửi các packet đến compute node ( 14 )
+
+- Trên Compute Node :
+	- B1  : Physical interface ( 15 ) sẽ chuyển tiếp các packet đến overlay network ( 16 )
+	- B2 : OVS tunnel  bridge sẽ sẽ sử dụng VLAN ID cho Tunnel ID tương ứng 
+	- B3 : OVS tunnel bridge ( 17 ) sẽ chuyển các packet sang OVS ingrateion bridge  ( 18 ) sử dụng `patch-int` 
+	- B4 : OVS integration bridge loại bỏ VLAN 
+	- B5 : OVS integration bridge sử dụng securtity group ( 19 ) để filter các packet sau đó gửi  sang Linux Bridge ( 20 ) thông qua veth pair
+	- B6 : Securtiy group sẽ thực hiện filtering ( 21 )
+	- B7 : Security group ( 22 ) sẽ chuyển tiếp goi tin đến instance interface ( 23 )  
+
+### 7.2.3.  Đông - Tây : các instance cùng 1 mạng 
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.21.png">
+
+- Trên Compute 1 :
+	- B1 : instance interface  ( 1 ) forward các packet tới security group trên ( Linux Bridge )  ( 2 ) thông qua `veth` pair
+	- B2 : securtity group ( 3 ) đảm nhiện filter tại đây
+	- B3 : Linux Bridge  port( 4 ) forward packet tới OVS integration ( 5 )nhờ `veth` pair
+	- B4 : OVS  ingration bridge thêm VLAN ID vào packet
+	- B5 : OVS integration bridge thay VLAN ID bằng Tunnel ID
+	- B6 : OVS integration bridge patch port ( 6 ) forward packet tới OVS Tunnel bridge patch port ( 7 ) 
+	- B7 : OVS tunnel bridge ( 8 ) gắn VNI vào packet
+	- B8 : Underlay nework ( 9 ) cho phép overlay network ( 10  )  chuyển packet đến network node
+
+ -  Trên Compute 2
+	- B1 : Underlay network  ( 11) cho phép overlay networking ( 12 ) forward tới OVS bridge tunnel 
+	- B2 : OVS tunnel bridge thêm một Tunnel ID vào packet 
+	- B3 : OVS tunnel bridge thay đổi Tunnel ID bằng VLAN ID tương ứng.
+	- B4 : OVS tunnel bridge patch port ( 13 ) forward packet tới OVS integratation bridge `patch tun` port ( 14 ) 
+	- B5 : OVS integration bridge bỏ VLAN ( 15 ) forward packet đến Linux bridge `veth` port ( 16 )
+	- B6 : Security Group đảm nhiệm filter packet ( 17 ) 
+	- B7 : Linux bridge veth port ( 18 ) forward packet đến instance interface ( 19 ) 
+
+
+
+### 7.2.4.  Đông - Tây : các instance khác mạng
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.22.png">
+
+- Trên Compute Node : 
+	- B1 : instance interface ( 1 ) forward packet đến Linux Bridge port ( 2 ) thông qua `veth` pair
+	- B2 : Security group ( 3 ) sẽ đảm nhiệm filter các packet 
+	- B3 : Linux bridge port ( 4 ) sẽ forward packet đến OVS integration ( 5 ) thông qua `veth` pair
+	- B4 : OVS integration bridge sẽ thêm VLAN ID vào các packet
+	- B5 : OVS integration bridge thay đổi các VLAN ID thành Tunnel ID
+	- B6 : OVS integration bridge `patch-tun` ( 6 ) forward packet tới OVS tunnel bridge ( 7 ) `patch-int`
+	- B7 : OVS tunnel bridge ( 8 ) gán VNI vào các packet
+	- B8 : Underlay network ( 9 ) sẽ cho phép overlay network gửi các packet đến network node ( 10 ) 
+
+
+- Trên Network Node
+	- B1 : Underlay network interface ( 11 ) cho phép overlay network forward packet tới OVS tunnel bridge ( 12 )
+	- B2 : OVS tunnel bridge loại bỏ VNI và tag Tunnel ID cho packet
+	- B3 : OVS tunnel bridge loại bỏ tag Tunnel  ID bằng VLAN ID
+	- B4 : OVS tunnel bridge `patch port` ( 13 )  forward packet tới OVS integration bridge `patch-tun` ( 14 )
+	- B5 : OVS intergation bridge ( 15 ) xóa bỏ VLAN ID các packet và forward lên interface của self-service router ( 15 )
+	- B6 : Router forward packet sang next-hop , gateway của mạng thứ 2  thông qua router interface( 17 ) 
+	- B7 : Router forward packet đến OVS integration bridge port self-service ( 2 ) 
+	- B8 :  OVS integration bridge `patch-tun` ( 19 ) forward packet sang OVS tunnel bridge `patch-ini ` patch port ( 20 )
+	- B9 : OVS tunnel bridge ( 21 ) tag VNI cho các packet
+	- B10 : Underlay network ( 22 ) sẽ cho phép overlay network ( 23 ) forward packet về compute node
+
+- Trên Compute Node
+	- B1 : Underlay network ( 24 ) cho phép overlay network forward packet ( 25 ) tới các OVS Tunnel Bridge
+	- B2 : OVS Tunnel Bridge gở bỏ VNI và tag Tunnel ID
+	- B3 : OVS Tunnel Bridge thay thế Tunnel ID thay thế bằng VLAN ID
+	- B4 : OVS Tunnel Bridge port ( 26 ) forward packet tới OVS integration bridge sử dụng patch port ( 27 )
+	- B5 : OVS integration sẽ remove VLAN trên các packet 
+	- B6 :  OVS integration bridge port ( 28 ) forward packet tới tới Linux Bridge ( 29 ) sử dụng `veth` pair
+	- B7 : Security group ( 30  ) sẽ filer các packet
+	- B8 : Linux Bridge ( 31 ) sẽ forward packet tới các instance interface ( 32 ) sử dụng `veth` pair
+
+
+## 7.3. Mô hình Provider
+
+
+### 7.3.1. Bắc Nam 
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.23.png">
+
+
+- Trên Compute 1 : 
+	- B1 : instance interface  ( 1 ) forward packet đến Linux Bridge port ( 2 ) nhờ  `veth` pair
+	- B2 : Security group ( 3 ) đảm nhiệm filter các packet 
+	- B3 : Security group OVS bridge port ( 4  ) forward packet tới OVS integration bridge port ( 5 ) nhờ `veth` pair
+	- B4 : OVS integration bridge tag VLAN ID tới packet
+	- B5 : OVS integration bridge patch port ( 6 ) forward packet đến OVS provider bridge patch port ( 7 )
+	- B6 : OVS provider bridge Tag VLAN external cho packet
+	- B7 : OVS provider bridge port ( 8 ) forward packet tới physcal interface
+	- B8 : Physical interface ( 9) forward packet tới hạ tầng mạng ( 10 )
+
+- Hạ tầng mạng ngoài : 
+	- B1 : Switch bỏ VLAN ID và forward packet lên Router ( 11 )
+	- B2 : Router forward forward data ra các mạng ngoài ( 12 ) và forward đến switch ( 13 ) 
+
+### 7.3.2 : Đông - Tây : cùng mạng
+
+- Trên Compute 1 : 
+	- instance interface ( 1 ) forward data sang bridge instance port ( 2 )thông qua `veth` pair
+	- Security group ( 3 ) đảm nhiệm filter các packet
+	- Linux bridge port ( 4 ) forward packet sang OVS integration bridge port ( 5 ) sử dụng `veth` pair
+	- OVS integration tag internal VLAN_ID vào các packet
+	- OVS integration bridge patch port ( 6 ) forward packet sang OVS integration bridge patch port ( 7 )
+	- OVS provider bridge sử dụng VLAN_ID external thay thế cho internal VLAN_ID
+	-  OVS provider bridge port  ( 8 )forward packet sang physical interface ( 9 ) 
+	- Physical interface forward packet đến switch vật lý ( 10 )
+	
+- Trên Switch 
+	- Forward packet từ compute node 1 sang compute node 2 
+
+- Trên Compute 2 : 
+	- Physical interface network interface ( 12 ) forward packet tới OVS provider port ( 13 )
+	- OVS provider bridge patch port ( 14 ) forward packet tới OVS intergration bridge  patch port ( 15 )
+	- OVS integration bridge định nghĩa VLAN_ID 
+	- OVS integration bridge port ( 16 ) forward packet đến  Linux Bridge port ( 17  ) sử dụng `veth` pair
+	- Securtiy group ( 18 ) đảm nhiệm filter các packet
+	- Linux brige veth port ( 19 ) forward các packet sang instance interface ( 20 ) sử dụng `veth` pair
+
+
+### 7.3.3. Đông -  Tây : khác mạng
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.24.png">
+
+- Trên Compute Node
+	- B1 : Instance 1 interface ( 1  ) forward packet sang Linux Bridge veth port ( 2 ) 
+	- B2 : Securtiy group rule ( 3 ) sẽ đảm nhiệm filter package
+	- B3 :  Linux Bridge port ( 4) forward packet đến OVS integration bridge  veth port ( 5 )
+	- B4 : OVS integration bridge thêm VLAN vào các packet 2
+	- B5 : OVS integration bridge  
+	- B6 : OVS provider bridge sử dụng VLAN_ID external thay thế cho local VLAN_ID
+	- B7 : OVS provider patch port ( 6 ) forward packet sang OVS provider bridge patch port ( 7 )
+	- B8 : OVS provider bridge port ( 8 ) forward packet tới physical interface ( 9 ) 
+	- B9 : Physical interface forward packet tới switch vật lý ( 10 ) 
+	
+- Trên Switch
+	- B1 : Switch bỏ các VLAN_ID khỏi packet và forward tới router ( 11 )
+	- B2 : Router sẽ forward tới các cổng ( 12) để forward packet sang mạng 2 ( 13 )
+	- B3 : Router forward các packet tới switch ( 14 )
+	- B4 : Switch tag VLAN vào packet và forward tới Compute Node ( 15 )
+
+- Trên Compute Node
+	- B1 : Physical interface ( 16 ) forward packet tới OVS provider bridge port ( 17 )
+	- B2 : OVS provider bridge patch port ( 18 ) forward packet tới OVS integration bridge port ( 19 )
+	- B3 : OVS integration bỏ VLAN_ID và tag local VLAN_ID
+	- B4 : OVS integration port ( 20 ) bỏ VLAN và forward đến Linux Bridge ( 21 )
+	- B5 : Linux bridge sẽ đảm nhiệm filter packet ( 22 ) 
+	- B6 : Linux bridge veth port ( 23 ) foreward packet tới instance 2 interface ( 24 )
 
 
 
