--- a/06.Nova.md
+++ b/06.Nova.md
@@ -126,24 +126,89 @@ Workflow khi boot một VM:
 
 
 
-## 2.5 Chuyển tiếp trạng thái của VM
+## 1.5 Chuyển tiếp trạng thái của VM
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/06.03.png">
 
 
 
 
+# 2. Làm việc với Nova
+
+## 2.1. Làm việc với Nova qua CLI
+
+### Tạo flavor
+
+### Liệt kê danh sách flavor
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.04.png">
+
+### Hiện thị thông tin 1 flavor
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.05.png">
+
+### Xóa bỏ một flavor
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.06.png">
+
+### Tạo key pair
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.07.png">
+
+### import keypair từ file key
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.08.png">
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.09.png">
+
+
+### Hiện thị danh sách key pair
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.10.png">
+
+### Hiển thị thông tin 1 flavor
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.11.png">
+
+### Xóa bỏ một key pair
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.12.png">
+
+### Tạo máy ảo từ image
+### Tạo máy ảo từ volume
+### Xóa máy ảo
+### Mở máy ảo
+### Tắt máy ảo
+### Reboot máy ảo
+### Hiển thị danh sách máy ảo
+### Tạo mới snapshot
+### Hiển thị danh sách snapshot
+### Xóa snapshot
+### Xem danh sách hypervisor
 
 
 
+## 2.2. Làm việc với Nova qua Dashboard
 
 
 
-
-
-
-
-
+### Liệt kê danh sách flavor
+### Hiện thị thông tin 1 flavor
+### Xóa bỏ một flavor
+### Tạo key pair
+### Hiện thị danh sách key pair
+### Xóa bỏ một key pair
+### Tạo máy ảo từ image
+### Tạo máy ảo từ volume
+### Xóa máy ảo
+### Mở máy ảo
+### Tắt máy ảo
+### Reboot máy ảo
+### Hiển thị danh sách máy ảo
+### Tạo mới snapshot
+### Hiển thị danh sách snapshot
+### Xóa snapshot
+### Xem danh sách hypervisor
 
 
 
