--- a/06.Nova.md
+++ b/06.Nova.md
@@ -181,15 +181,27 @@ Workflow khi boot một VM:
 ### Tạo máy ảo từ volume
 ### Xóa máy ảo
 ### Mở máy ảo
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.14.png">
+
 ### Tắt máy ảo
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.15.png">
+
 ### Reboot máy ảo
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.16.png">
+
 ### Hiển thị danh sách máy ảo
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.17.png">
+
 ### Tạo mới snapshot
 ### Hiển thị danh sách snapshot
 ### Xóa snapshot
 ### Xem danh sách hypervisor
 
-
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.18.png">
 
 ## 2.2. Làm việc với Nova qua Dashboard
 
