--- a/06.Nova.md
+++ b/06.Nova.md
@@ -177,9 +177,14 @@ Workflow khi boot một VM:
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/06.13.png">
 
-### Tạo máy ảo từ image
-### Tạo máy ảo từ volume
+### Tạo máy ảo
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.19.png">
+
 ### Xóa máy ảo
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.20.png">
+
 ### Mở máy ảo
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/06.14.png">
@@ -196,9 +201,6 @@ Workflow khi boot một VM:
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/06.17.png">
 
-### Tạo mới snapshot
-### Hiển thị danh sách snapshot
-### Xóa snapshot
 ### Xem danh sách hypervisor
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/06.18.png">
