--- a/06.Nova.md
+++ b/06.Nova.md
@@ -209,23 +209,20 @@ Workflow khi boot một VM:
 
 
 
-### Liệt kê danh sách flavor
-### Hiện thị thông tin 1 flavor
-### Xóa bỏ một flavor
-### Tạo key pair
-### Hiện thị danh sách key pair
-### Xóa bỏ một key pair
-### Tạo máy ảo từ image
-### Tạo máy ảo từ volume
-### Xóa máy ảo
-### Mở máy ảo
-### Tắt máy ảo
-### Reboot máy ảo
-### Hiển thị danh sách máy ảo
-### Tạo mới snapshot
-### Hiển thị danh sách snapshot
-### Xóa snapshot
-### Xem danh sách hypervisor
+### Quản lý flavor
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.21.png">
+
+
+### Quản lý key pair
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.22.png">
+
+### Quản lý instance
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.23.png">
+
+
 
 
 
