--- a/06.Nova.md
+++ b/06.Nova.md
@@ -223,6 +223,8 @@ Workflow khi boot một VM:
 <img src="https://github.com/lean15998/Openstack/blob/main/images/06.23.png">
 
 
+### Xem danh sách hypervisor
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.24.png">
 
 
