--- a/08.Cinder.md
+++ b/08.Cinder.md
@@ -50,15 +50,58 @@
   </ul>
 
 
+# 2. Làm việc với cinder
+
+## 2.1. Làm việc với cinder qua CLI
+
+
+### Tạo, xóa, liệt kê, show volume
+- Tạo một volume no-source
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/08.02.png">
+
+- Tạo volume từ image 
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/08.03.png">
+
+- Tạo một volume từ volume khác
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/08.04.png">
+
+
+- Xóa volume
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/08.05.png">
+
+- Liệt kê các volume
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/08.06.png">
+
+- show volume
+ 
+ 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/08.07.png">
+
+## 2. Snapshot volume
+
+- Tạo snapshot
 
 
 
+- List ra danh sách các snapshot của volume
 
 
+- Xóa snapshot
 
 
+## 3. Attach và detach volume cho máy ảo
+
+- Attach volume
 
 
-
+- Detach volume
 
 
