--- a/07.Neutron.md
+++ b/07.Neutron.md
@@ -657,8 +657,64 @@ Trong mô hình trên bao gồm :
 	- B6 : Linux bridge veth port ( 23 ) foreward packet tới instance 2 interface ( 24 )
 
 
+# 8. Làm việc vói neutron
+
+## 8.1. Làm việc với neutron qua CLI
 
 
+### 8.1.1. Khởi tạo Network , Router, Port, Floating IP
+
+- Khởi tạo external network
+
+
+- Khởi tạo Subnet cho external network 
+
+
+- Khởi tạo một Sefl-Service Network
+
+
+- Khởi tạo subnet cho self-service network
+
+
+-  Khởi tạo một router
+
+
+- Xem thông tin router vừa khởi tạo
+
+
+
+- Liệt kê các port
+ 
+ 
+- Xem thông tin cụ thể của một Port
+
+- Khởi tạo **Floating IP ** , gắn Floating IP đến cho các instance với các IP từ ISP để có thể truy cập từ ngoài internet sử dụng DNAT
+
+
+
+### 8.1.2. Xóa Router, Subnet, Network 
+
+####  Xóa Self-Service Subnet đang Binding Router
+- **Để xóa một subnet đang gắn vào một router cần xóa subnet đó khỏi router để xóa các port đang đc binding**
+
+-  Xem router nào đang chứa subnet
+
+- Xóa Subnet ra khởi router
+
+
+#### Xóa  Self-service Network
+
+- Khi xóa một Network thì sẽ xóa các Subnet đang binding vào
+
+
+### 8.1.3. Quản lý Security Group
+- Security Group đảm nhiệm nhiệm vụ filter như `iptables` 
+
+- Xem thông tin của một security group
+
+Như vậy đã có một sececurity đã được tạo trên project admin
+
+- Khởi tạo một rule mới
 
 
 
