Update and rename 09.Selin.md to 09.Senlin.md

--- a/09.Senlin.md
+++ b/09.Senlin.md
@@ -15,4 +15,10 @@ Từ trước bản Ussuri, Senlin chỉ có 2 thành phần là Senlin-api và 
 
 Từ bản Ussuri trở đi, Vì Senlin chịu trách nhiệm cho số lượng lớn các thread task. Để giảm số lượng thread chạy trên mỗi process và khiến service Engine linh hoạt hơn nên service Engine đã được tách thành 3 services. `senlin-conductor`, `senlin-engine`, `senlin-health-manager`.
 
+# 3. Cài đặt Senlin
+
+https://docs.openstack.org/senlin/stein/install/
+
+
+
 
