--- a/11.Trove.md
+++ b/11.Trove.md
@@ -6,7 +6,7 @@
 
 # 2.Thành Phần
 
-#### trove-api
+### trove-api
 Dịch vụ trove-api cung cấp một API RESTful hỗ trợ JSON và XML để cung cấp và quản lý các Trove instance.
 - A REST-ful component
 - Entry point - Trove/bin/trove-api
@@ -30,7 +30,7 @@ Dịch vụ trove-api cung cấp một API RESTful hỗ trợ JSON và XML để
 - Tại thời điểm này, một mô-đun api của một thành phần khác (TaskManager, GuestAgent, v.v.) được sử dụng để gửi yêu cầu trở đi thông qua RabbitMQ.
 
 
-#### trove-taskmanager
+### trove-taskmanager
 Các dịch vụ trove-Taskmanager không những nâng nặng đi xa như cung cấp các instance, quản lý vòng đời của instance, và thực hiện các hoạt động trên Database instance.
 - Một dịch vụ lắng nghe trên một RabbitMQ topic
 - Entry point - Trove/bin/trove-taskmanager
@@ -40,7 +40,7 @@ Các dịch vụ trove-Taskmanager không những nâng nặng đi xa như cung 
 - Manager sau đó chuyển hướng việc xử lý đến một đối tượng từ mô-đun models.py. Nó tải một đối tượng từ lớp có liên quan với context và instance_id
 - Xử lý thực tế thường được thực hiện trong mô-đun models.py
 
-#### trove-guestagent
+### trove-guestagent
 guestagent là một dịch vụ chạy trong instance khách, trách nhiệm quản lý và thực hiện các hoạt động trên cơ sở dữ liệu riêng của mình.Guest Agent lắng nghe các RPC message thông qua message bus và thực hiện thao tác được yêu cầu.
 - Tương tự như TaskManager (dịch vụ lắng nghe RabbitMQ topic).
 - GuestAgent chạy trên mọi DB instance và một MQ topic chuyên dụng được sử dụng (được xác định là instance's id)
