--- a/11.Trove.md
+++ b/11.Trove.md
@@ -45,12 +45,22 @@ guestagent là một dịch vụ chạy trong instance khách, trách nhiệm qu
 - Tương tự như TaskManager (dịch vụ lắng nghe RabbitMQ topic).
 - GuestAgent chạy trên mọi DB instance và một MQ topic chuyên dụng được sử dụng (được xác định là instance's id)
 - Entry point - Trove/bin/trove-guestagent
-- Chạy như một RpcService được cấu hình bởi Trove/etc/trove/trove-guestagent.conf.sample xác định trove.guestagent.manager.Manager như Manager - basically đây là entry point cho các yêu cầu đến thông qua hàng đợi
+- Chạy như một RpcService được cấu hình bởi Trove/etc/trove/trove-guestagent.conf.sample xác định trove.guestagent.manager.Manager như là Manager - basically đây là entry point cho các yêu cầu đến thông qua hàng đợi
 - Các request cho thành phần này được đẩy đến MQ từ một thành phần khác bằng cách sử dụng mô-đun api của GuestAgent sử dụng using _cast() hoặc _call() (sync/a-sync) và đặt tên của phương thức làm tham số
 - Trove/openstack/common/rpc/dispatcher.py- RpcDispatcher.dispatch() gọi phương thức thích hợp trong Trình quản lý bằng một số tương đương với reflection
 - Manager sau đó chuyển hướng xử lý đến một đối tượng (thường là) từ mô-đun dbaas.py
 - Việc xử lý thực tế thường được thực hiện trong mô-đun dbaas.py
 
+### trove-conductor
+conductor là một dịch vụ chạy trên host, chịu trách nhiệm nhận tin nhắn từ các instance của khách để cập nhật thông tin trên host. Ví dụ: trạng thái phiên bản và trạng thái hiện tại của một bản sao lưu. Với conductor, các instance khách không cần kết nối trực tiếp đến cơ sở dữ liệu của máy chủ.Conductor lắng nghe các RPC message thông qua bus bản tin và thực hiện thao tác liên quan.
+- Giống với guest-agent ở chỗ nó là một dịch vụ lắng nghe RabbitMQ topic. Chỉ khác là conductor sống trên host, không phải guest.
+- Guest agents giao tiếp với conductor bằng cách đưa các thông báo về chủ đề được định nghĩa trong cfg là conductor_queue. Theo mặc định, đây là “trove-conductor”.
+- Entry point - trove/cmd/conductor.py
+- Chạy như một RpcService được cấu hình bởi etc/trove/trove.conf xác định trove.conductor.manager.Manager như là manager. Đây là entry point cho các yêu cầu đến trong hàng đợi.
+- Các request được đẩy đến MQ từ một thành phần khác bằng cách sự dụng  _cast() (đồng bộ). Đại khái như form: {“method”: “<method_name>”, “args”: {<arguments>}}
+- Công việc cập nhật cơ sở dữ liệu thực tế được thực hiện bởi trove/uctor/manager.py
+- Phương thức "heartbeat" cập nhật trạng thái của một instance. Điều này được sử dụng để báo cáo rằng instance đã thay đổi từ NEW thành BUILDING thành ACTIVE, v.v.
+- Phương thức “update_backup” thay đổi thông tin chi tiết của một bản backup, bao gồm trạng thái hiện tại của nó, kích thước của bản backup, loại và checksum.
 
 
 
