--- a/12.Senlin.md
+++ b/12.Senlin.md
@@ -1,6 +1,6 @@
 # 1. Senlin là gì?
 
-Senlin là dịch vụ Cluster của Openstack. Senlin khởi tạo và vận hành cluster dồng nhất tài nguyên của các service trong Openstack. Mục tiêu là để điều phối các đối tượng tài nguyên dễ dàng hơn.
+Senlin là dịch vụ Cluster của Openstack. Senlin khởi tạo và vận hành cluster đồng nhất tài nguyên của các service trong Openstack. Mục tiêu là để điều phối các đối tượng tài nguyên dễ dàng hơn.
 
 Senlin tương tác với các service khác trong Openstack để khởi tạo cluster dựa trên các tài nguyên của các service. Việc tương tác này thông qua profile plugins.
 
@@ -18,6 +18,85 @@ Từ bản Ussuri trở đi, Vì Senlin chịu trách nhiệm cho số lượng 
 # 3. Cài đặt Senlin
 
 https://docs.openstack.org/senlin/stein/install/
+
+
+# 4. Làm việc với Senlin
+
+## 4.1 Làm việc với Senlin qua CLI
+
+- Tạo Profile
+
+```sh
+root@quynv:~# openstack cluster profile create \
+> --spec-file cirros_basic.yaml cirros_server
+```
+- File cirros_basic.yaml
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/12.01.PNG">
+
+- Tạo Cluster
+
+```sh
+root@quynv:~# openstack cluster create --profile cirros_server mycluster
+```
+
+- Tăng kích thước Cluster
+
+```sh
+root@quynv:~# openstack cluster expand mycluster
+```
+
+- Giảm kích thước Cluster
+
+```sh
+root@quynv:~# openstack cluster shrink mycluster
+```
+
+- Thay đổi kích thước Cluster
+
+```sh
+root@quynv:~# openstack cluster resize --capacity 2 mycluster
+```
+
+- Xem thông tin Cluster
+
+```sh
+root@quynv:~# openstack cluster show mycluster
+```
+
+- Tạo Node
+
+```sh
+root@quynv:~# openstack cluster node create --profile cirros_server newnode
+```
+
+- Thêm node vào cluster
+
+```sh
+root@quynv:~# openstack cluster members add --nodes newnode mycluster
+```
+
+- Xoá node khỏi cluster
+
+
+```sh
+root@quynv:~# openstack cluster members del --nodes newnode mycluster
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
