--- a/12.Senlin.md
+++ b/12.Senlin.md
@@ -84,13 +84,20 @@ root@quynv:~# openstack cluster members del --nodes newnode mycluster
 ```
 
 
+## 4.1 Làm việc với Senlin qua Dashboard
 
 
+- Tạo Profile
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/12.02.PNG">
 
+- Tạo Cluster
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/12.03.PNG">
 
+- Tạo Node
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/12.04.PNG">
 
 
 
