--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -1,1 +1,39 @@
 
+# 1. Octavia - Load Balancing Solution For Openstack
+## 1.1. Mở đầu
+
+- Octavia là project trong Openstack, được sử dụng làm giải pháp cân bằng tải trong Openstack. 
+- Octavia được bắt đầu từ Neutron LBaas Project. 
+- Octavia cung cấp dịch vụ cân bằng tải bằng  cách các máy ảo quản lý  máy ảo, container, bare metal server , được gọi chung là : _amphorae_. Octavia khác với khác với các giải khác vì nó sinh để phục vụ cho môi trường cloud, tùy chỉnh theo yêu cầu
+
+## 1.2.: Octavia được sử dụng trong Openstack khi nào
+
+- Cân bằng tải ( load balancing ) là điều cần thiết để để mở rộng quy mô có thể đơn giản hoặc quy mô lớn và tự động. 
+- Octavia được xem là project cần thiết giống như Nova, Neutron và các core project khác - điều cần thiết để xây dựng một Openstack Cloud ecosystem
+- Để hoàn thành vai trò , Octavia cần làm việc với các project khác :
+	- Nova : để quản lý vòng đời các tài nguyên trên các compute node theo nhu cầu
+	- Neutron : cho các mạng tentant ( project ) và các mạng external 
+	- Barbican : quản lý TLS certificate và credential , và TLS Session
+	- Keystone : dùng để xác thực Octavia API và làm việc với các project khác
+	- Glance : để lưu trữ các _amphorae_ virtual image
+	- Olso : để giao tiếp giữa các Octavia compoment.
+	- Taskflow : 
+
+- Octavia được thiết kế để tương tác với các thành phần ở trên. Với trên trừng project Octavia sẽ sử dụng một driver interface để làm việc.
+- Kể từ phiên bản Pike, Octavia được sử dụng làm một giải pháp cân bằng tải độc lập. Neutron LBaas được xóa bỏ tại phiên bản Queens, Octavia sẽ được sử dụng thay thế. 
+
+
+## 1.3. Thành phần trong Octavia
+
+![](https://img-blog.csdn.net/2018073009232644?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L0ptaWxr/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+
+- Amphorea : là một máy ảo , container hoặc server cung cấp dịch vụ cân bằng tải. Nêu là máy ảo sẽ chạy trên các compute node, với các cấu hình để có khả năng cân bằng tải như listenner, pool, heath monitor, L7 Policies, hoặc gửi heat beat về Heah Manager
+- Controller : được xem là "brain" của Octavia . Có bao gồm các thành phần con , và các tiến trình daemon. Nó có thể tương tác với các các thành phần con thông qua các drvier interface. 
+	- API Controller : cung cấp API interface, nhận các request và gửi về controller worker thông qua Olso message
+	- Controller worker : nhận các lệnh từ API controller, sau đó thực hiện các yêu đầu đề đề ra
+	- Heath Manager : cung cấp khả năng heat beat tới các amphorea, kiểm tra trạng thái và cung cấp khăng failover cho các máy ảo này
+	- Housekeeping Manager : cung cấp khả năng scaleup hoặc xóa dữ liệu và quản lý vòng đời của amphora certificate
+- network : octavia không thể hoàn thành nếu thiếu network. Các máy ảo amphora được gắn một network interface từ Load Balance network,hoặc sẽ là một port trên các tentant network. 
+- Pool : tập hợp các memeber lắng nghe request từ load balancer . Mỗi pool chỉ được liên kết với một listener.
+![](https://access.redhat.com/webassets/avalon/d/Red_Hat_OpenStack_Platform-13-Networking_Guide-en-US/images/1c872c1cb32da36ce85f48656ad056d8/OpenStack_Networking-Guide_471659_0518_LBaaS-Topology.png)
+
