--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -25,7 +25,7 @@
 
 ## 1.3. Thành phần trong Octavia
 
-![](https://img-blog.csdn.net/2018073009232644?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L0ptaWxr/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.01.png">
 
 - Amphorea : là một máy ảo , container hoặc server cung cấp dịch vụ cân bằng tải. Nêu là máy ảo sẽ chạy trên các compute node, với các cấu hình để có khả năng cân bằng tải như listenner, pool, heath monitor, L7 Policies, hoặc gửi heat beat về Heah Manager
 - Controller : được xem là "brain" của Octavia . Có bao gồm các thành phần con , và các tiến trình daemon. Nó có thể tương tác với các các thành phần con thông qua các drvier interface. 
@@ -35,5 +35,5 @@
 	- Housekeeping Manager : cung cấp khả năng scaleup hoặc xóa dữ liệu và quản lý vòng đời của amphora certificate
 - network : octavia không thể hoàn thành nếu thiếu network. Các máy ảo amphora được gắn một network interface từ Load Balance network,hoặc sẽ là một port trên các tentant network. 
 - Pool : tập hợp các memeber lắng nghe request từ load balancer . Mỗi pool chỉ được liên kết với một listener.
-![](https://access.redhat.com/webassets/avalon/d/Red_Hat_OpenStack_Platform-13-Networking_Guide-en-US/images/1c872c1cb32da36ce85f48656ad056d8/OpenStack_Networking-Guide_471659_0518_LBaaS-Topology.png)
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.02.png">
 
