--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -37,3 +37,98 @@
 - Pool : tập hợp các memeber lắng nghe request từ load balancer . Mỗi pool chỉ được liên kết với một listener.
 <img src="https://github.com/lean15998/Openstack/blob/main/images/10.02.png">
 
+## 1.4. Các tính năng cân bằng tải
+
+- Monitors: Cung cấp khả năng giám sát tính khả dụng với các phương thức PING, TCP, HTTP và HTTPS GET. Monitors xác định xem các pool member sẵn sàng xử lý các request không.
+- Management: Được quản lý bằng nhiều bộ công cụ khác nhau. API REST có sẵn để quản trị theo chương trình và viết tập lệnh. Người dùng thực hiện quản lý quản trị các bộ cân bằng tải thông qua CLI (neutron) hoặc bảng điều khiển OpenStack.
+- Connection limits: Lưu lượng truy cập đến có thể tuỳ chỉnh giới hạn kết nối. Tính năng này cho phép kiểm soát khối lượng công việc và cũng có thể hỗ trợ giảm thiểu các cuộc tấn công DoS (Từ chối Dịch vụ).
+- Session persistence: Hỗ trợ độ bền của phiên bằng cách đảm bảo các yêu cầu đến được chuyển đến đúng instance  trong một pool có nhiều instance. LBaaS hỗ trợ các quyết định định tuyến dựa trên cookie và địa chỉ IP nguồn.
+
+## 1.5. Các thuật ngữ của Octavia
+
+- **Amphora**: là một máy ảo , container hoặc server cung cấp dịch vụ cân bằng tải trong hệ thống Octavia. Cụ thể, một amphora nhận các request từ các client trên front-end và phân phối các yêu cầu này đến các hệ thống back-end. Amphorae giao tiếp với controller của họ qua Mạng LB thông qua giao diện trình điều khiển trên controller.
+- **Amphora Load Balancer Driver**: Thành phần của controller thực hiện tất cả các giao tiếp với amphorae. Driver giao tiếp với controller thông qua một base class chung và các phương thức có liên quan , và chuyển chúng thành các câu lệnh điều khiển thích hợp với mọi loại phần mềm chạy trên amphora back-end tương úng với driver.
+- **Apolocation**: thuật ngữ được sử dụng để mô tả khi hai hoặc nhiều amphorae không được định vị trên cùng một phần cứng vật lý (cần thiết trong liên kết cấu trúc HA). Cũng có thể được sử dụng để mô tả hai hoặc nhiều bộ cân bằng tải không được sắp xếp trên cùng một amphora.
+- **Controller**: Daemon có quyền truy cập vào cả hai thành phần LB Network và OpenStack điều phối và quản lý tất cả hoạt động của hệ thống cân bằng tải Octavia. Controller thường sử dụng giao diện trình điều khiển trừu tượng (thường là một base class) để giao tiếp với nhiều thành phần khác trong môi trường OpenStack nhằm tạo điều kiện cho việc loose coupling với các thành phần khác này.Nó là "bộ não" của hệ thống Octavia.
+- **HAProxy**: Phần mềm cân bằng tải được sử dụng trên Octavia. Các process HAProxy chạy trên amphorae và hoàn thành nhiệm vụ cung cấp dịch vụ cân bằng tải.
+- **Health Monitor**: Xác định phương thức kiểm tra cho mỗi member của pool. Bản thân Health Monitor là một object pure-db mô tả cách mà phần mềm cân bằng tải trên amphora sử dụng để theo dõi health của các member back-end của pool	mà health monitor được liên kết.
+
+- **LB Network**: Mạng mà controller và amphorae giao tiếp với nhau. LB network là nova hoặc neutron network mà cả controller và amphorae đều có quyền truy cập, nhưng không liên kết với bất kỳ tenant nào. LB network không tiếp xúc trực tiếp với bất kỳ thành phần nào của Openstack core ngoài Octavia controller.
+- **Listener**: Lắng nghe các kết nối trên TCP/UDP Port. Một Listener có thể tham chiếu đến nhiều pool (và chuyển đổi chúng bằng cách sử dụng L7 policy).
+- **Load Balancer**: Một nhóm các Listener trên một hoặc nhiều VIP và liên kết với một hoặc nhiều amphorae.
+- **Load Balancing**:Quá trình nhận các request của client trên giao diện front-end và phân phối các request này đến server back-end theo các quy tắc khác nhau. Load balancing cho phép nhiều server tham gia cung cấp một số loại dịch vụ TCP/UDP cho client một cách hiệu quả, có tính khả dụng cao và có khả năng mở rộng.
+- **Member**: Một server back-end hoặc một hệ thống duy nhất. Một member được liên kết với một pool. 
+- **Pool**:  Một nhóm các member mà listener chuyển tiếp các request của client. Một pool liên kết với một listener.
+- **TLS Termination**:
+- **VIP**: Địa chỉ IP duy nhất được liên kết với Loadbalancer. VIP có thể được chỉ định cho một số amphorae và giao thức L2 như CARP, VRRP hoặc HSRP có thể được sử dụng để duy trì tính khả dụng của nó. Trong cấu trúc liên kết L3, địa chỉ VIP có thể được chỉ định cho thiết bị định tuyến các gói đến amphorae, sau đó yêu cầu cân bằng tải đến member back-end.
+
+
+# 2. Octavia L7 Policy
+
+- Layer 7 Load Balancing là khái niệm được xây dựng từ mô hình mạng OSI, muốn chỉ ra các bộ cân bằng tải phân phối các request tới các back-end dựa vào dữ liệu layer7 ( application layer ). Layer 7 Load Balancing có thể thay thế bằng các khái niệm khác : request switching, application load balacing, content based routing, content based switching, content based balancing. 
+- Layer 7 load balancer bao gồm một listener mà chấp nhận các request và phân tán các request tới các back-end pool dựa vào các chính sách mà sử dụng các dữ liệu của ứng dụng để xác định pools nào có thể đảm nhiệm request này
+Điều này có thể giúp cho việc tối ưu,điều chỉnh hạ tầng tùy thuộc vào từng loại content. Ví dụ điểm hình cho một Web Application theo mô hình server-side , xây dựng một hạ tầng bao gồm nhiều pool, mỗi pool sẽ đảm nhiệm đảm nhiệm các nhiệm vụ khác nhau. Pools sẽ đảm nhiệm lưu trữ các hình ảnh tải lên từ người dùng, còn Pool 2 sẽ đảm nhiệm các dữ liệu tĩnh ít thay đổi
+- Trong thực tế, Layer 7 Load Balancer sẽ không yêu cầu các pool tham gia vào quá trình cân bằng tải cùng một nội dung. Layer. Đối với các bộ cân bằng tải có sử dụng các L7 Policy sẽ chuyển các request dựa vào Header, host, URl...
+
+
+
+## 2.1 L7 Load Balancing trong Octavia
+ - Trong Octavia, Layer 7 Load Balancing hiện chỉ làm việc với giao thức HTTP
+
+### L7 Rule
+ - Trong Octavia, các L7 Rule các phép kiểm tra sẽ trả về kết quả Trule hoặc False . Ccác rule này được xây dựng từ một phép so sánh với cặp khóa Rule_type = Value
+
+- Octavia hỗ trợ các kiểu so sánh sau đây : 
+	- REGEX : sử dụng regular expression
+	- STARTS_WITH : được bắt đầu với  với chuỗi hoặc ký tự nào đó
+	- ENDS_WITH : được kết thúc với chuỗi hoặc ký tự nào đó
+	- CONTAINS : chứa chuỗi nào đó
+	- EQUAL_TO : bằng chuỗi nào đó
+
+- L7 Policy có các loại sau:
+	- Hostname : tên hostname trong request
+	- PATH : HTTP URI
+	- FILE_TYPE : dựa vào phần mở rộng của HTTP URL ( txt, png, js )
+	- HEADER : dựa vào các header của request
+	- Cookie : dựa vào cookie trong request
+
+- Các Value tùy thuộc vào từng môi trường
+
+### L7 Policy
+
+- L7 Policy bao gồm các L7 Rule có thể được được gắn vào một Listener mà đã  gắn  một back-end pool. Policy sẽ được thực hiện nếu các rule được gán vào policy này trả về giá trị `True`
+- Tất cả các Rule trong Policy sẽ như một phép toán `AND` . Ví dụ  `matching 1 && matching 2 && return true | return false `
+- Với kết quả  được trả về từ phép toán Rule là Trule , Policy sẽ thực hiện các Policy Action.
+
+### Policy Action
+
+- Các hành động sau đây mà các Policy có thể thực hiện
+	- REJECT : có thể trả về một response code và không chuyển tiếp request về một pool nào
+	- REDIRECT_TO_URL : sử dụng HTTP redirect chuyển tiếp request tới một URL mới
+	- REDIRECT_TO_POOL : chuyển tiếp request tới một backend để xử lý
+	
+	- Với HAproxy thứ tự ưu tiên các Policy action từ trên xuống dưới như sau : REJECT, REDIRECT_TO_URL, REDIRECT_TO_POOL. 
+### Policy Postion 
+
+- Khi có nhiều các policy được gán vào một listener, thì vị trí của nó trog list này trở nên quan trọng. Vị trí này xác định thứ tự mà các Policy này được thực hiện. Dưới đây là một số note trong khi sử dụng Octavia môi trường multi policies
+	- Với HAproxy thứ tự ưu tiên các Policy action từ trên xuống dưới như sau : REJECT, REDIRECT_TO_URL, REDIRECT_TO_POOL
+	- Nếu không policy nào xử lý được request, các request sẽ được gửi đến default pool ( nếu có ) hoặc không sẽ trả về status code 503
+	- Policy L7 được đánh giá theo một thứ tự cụ thể (như được xác định bởi thuộc tính vị trí) và policy đầu tiên phù hợp với request sẽ đảm nhiệm xử lý nó 
+	- Vị trí của Policy sẽ bắt đầu bằng 1
+	- Nếu một chính sách mới được tạo với một vị trí trùng với chính sách hiện có, thì chính sách mới sẽ được chèn vào vị trí đấy, đẩy lùi chính sách cũ
+	- Nếu một chính sách được khởi tạo mà không chỉ định vị trí sẽ được append vào với vị trí list_range
+	- Nếu một chính sách trước nó bị xóa, các chính sách sau sẽ được đẩy lên một đơn vị 
+  
+# 3. Cài đặt Octavia
+
+https://docs.openstack.org/octavia/latest/install/install.html
+
+
+# 4. Làm việc với Octavia
+## 4.1 Làm việc với Octavia qua CLI
+
+
+
+## 4.2 Làm việc với Octavia qua Dashboard
+
+
