--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -1,12 +1,11 @@
 
 # 1. Octavia - Load Balancing Solution For Openstack
-## 1.1. Mở đầu
 
 - Octavia là project trong Openstack, được sử dụng làm giải pháp cân bằng tải trong Openstack. 
 - Octavia được bắt đầu từ Neutron LBaas Project. 
 - Octavia cung cấp dịch vụ cân bằng tải bằng  cách các máy ảo quản lý  máy ảo, container, bare metal server , được gọi chung là : _amphorae_. Octavia khác với khác với các giải khác vì nó sinh để phục vụ cho môi trường cloud, tùy chỉnh theo yêu cầu
 
-## 1.2.: Octavia được sử dụng trong Openstack khi nào
+## 1.2. Octavia được sử dụng trong Openstack khi nào
 
 - Cân bằng tải ( load balancing ) là điều cần thiết để để mở rộng quy mô có thể đơn giản hoặc quy mô lớn và tự động. 
 - Octavia được xem là project cần thiết giống như Nova, Neutron và các core project khác - điều cần thiết để xây dựng một Openstack Cloud ecosystem
@@ -17,11 +16,8 @@
 	- Keystone : dùng để xác thực Octavia API và làm việc với các project khác
 	- Glance : để lưu trữ các _amphorae_ virtual image
 	- Olso : để giao tiếp giữa các Octavia compoment.
-	- Taskflow : 
 
 - Octavia được thiết kế để tương tác với các thành phần ở trên. Với trên trừng project Octavia sẽ sử dụng một driver interface để làm việc.
-- Kể từ phiên bản Pike, Octavia được sử dụng làm một giải pháp cân bằng tải độc lập. Neutron LBaas được xóa bỏ tại phiên bản Queens, Octavia sẽ được sử dụng thay thế. 
-
 
 ## 1.3. Thành phần trong Octavia
 
@@ -72,8 +68,7 @@
 
 
 
-## 2.1 L7 Load Balancing trong Octavia
- - Trong Octavia, Layer 7 Load Balancing hiện chỉ làm việc với giao thức HTTP
+## 2.1. L7 Load Balancing trong Octavia
 
 ### L7 Rule
  - Trong Octavia, các L7 Rule các phép kiểm tra sẽ trả về kết quả Trule hoặc False . Ccác rule này được xây dựng từ một phép so sánh với cặp khóa Rule_type = Value
