--- a/12.Senlin.md
+++ b/12.Senlin.md
@@ -1,19 +1,21 @@
 # 1. Senlin là gì?
 
-Senlin là dịch vụ Cluster của Openstack. Senlin khởi tạo và vận hành cluster đồng nhất tài nguyên của các service trong Openstack. Mục tiêu là để điều phối các đối tượng tài nguyên dễ dàng hơn.
+- Senlin là dịch vụ Cluster của Openstack. Senlin khởi tạo và vận hành cluster đồng nhất tài nguyên của các service trong Openstack. Mục tiêu là để điều phối các đối tượng tài nguyên dễ dàng hơn.
 
-Senlin tương tác với các service khác trong Openstack để khởi tạo cluster dựa trên các tài nguyên của các service. Việc tương tác này thông qua profile plugins.
+- Senlin tương tác với các service khác trong Openstack để khởi tạo cluster dựa trên các tài nguyên của các service. Việc tương tác này thông qua profile plugins.
 
-Profile là template có thể sử dụng để giao tiếp với Senlin thực hiện Create, update, delete các profile type là các tài nguyên của các services trong Openstack.
+- Profile là template có thể sử dụng để giao tiếp với Senlin thực hiện Create, update, delete các profile type là các tài nguyên của các services trong Openstack.
 
-Policy dùng để xác nhận những thao tác khi làm việc với cluster (Ví dụ xóa tài nguyên ngay sau khi bị out khỏi cụm cluster, tạo lại capacity mong muốn ban đầu,... )
+- Một Cluster có thể được liên kết với các policy object khác nhau để kiểm tra và thực thi ở các mức độ thực thi khác nhau. Thông qua các service API, user có thể tự động thêm node hoặc xoá node khỏi cluster, attach và detach các policy, chẳng hạn như creation policy, deletion policy, load-balancing policy, scaling policy, health policy...Thông qua sự liên kết với các project OpenStack khác, user sẽ được enabled để quản lý việc triển khai và điều phối các nhóm tài nguyên quy mô lớn dễ dàng hơn.
 
+- Senlin được thiết kế để có khả năng quản lý các loại đối tượng khác nhau.
 
 # 2. Thành phần
 
-Từ trước bản Ussuri, Senlin chỉ có 2 thành phần là Senlin-api và Senlin-engine(nơi quản lý cluster, phân tích thực thi các profile và policy).
-
-Từ bản Ussuri trở đi, Vì Senlin chịu trách nhiệm cho số lượng lớn các thread task. Để giảm số lượng thread chạy trên mỗi process và khiến service Engine linh hoạt hơn nên service Engine đã được tách thành 3 services. `senlin-conductor`, `senlin-engine`, `senlin-health-manager`.
+- **senlinclient**: Gói senlinclient cung cấp một plugin cho công cụ openstackclient để sử dụng giao diện dòng lệnh giao tiếp với senlin-api để quản lý các cluster, node, profile, policy, action và event.
+- **senlin-dashboard**: Senlin-dashboard là một plugin Horizon cung cấp giao diện người dùng cho senlin. 
+- **senlin-api**: senlin-api cung cấp một API REST OpenStack-native xử lý các request API bằng cách gửi chúng đến senlin-engine qua RPC.
+- **senlin-engine**: Nhiệm vụ chính của senlin-engine là tạo và sắp xếp các cluster, node, profile và policy.
 
 # 3. Cài đặt Senlin
 
