--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -122,6 +122,9 @@ https://docs.openstack.org/octavia/latest/install/install.html
 # 4. Làm việc với Octavia
 ## 4.1 Làm việc với Octavia qua CLI
 - Tạo 2 VM gắn vào network shared
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.03.PNG">
+
 - Tạo một Loadbalancer
 ```sh
 root@quynv:~# openstack loadbalancer create --name lb1 --vip-subnet-id shared-subnet
@@ -473,4 +476,13 @@ tuần tự.
 
 ## 4.2 Làm việc với Octavia qua Dashboard
 
-
+- Tạo Bộ cân bằng tải
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.05.PNG">
+- Tạo Listener
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.06.PNG">
+- Tạo Pool
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.07.PNG">
+- Tạo Member
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.08.PNG">
+- Tạo Health monitor
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.09.PNG">
