--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -477,12 +477,14 @@ tuần tự.
 ## 4.2 Làm việc với Octavia qua Dashboard
 
 - Tạo Bộ cân bằng tải
-<img src="https://github.com/lean15998/Openstack/blob/main/images/10.05.PNG">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.04.PNG">
 - Tạo Listener
-<img src="https://github.com/lean15998/Openstack/blob/main/images/10.06.PNG">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.05.PNG">
 - Tạo Pool
-<img src="https://github.com/lean15998/Openstack/blob/main/images/10.07.PNG">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.06.PNG">
 - Tạo Member
-<img src="https://github.com/lean15998/Openstack/blob/main/images/10.08.PNG">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.07.PNG">
 - Tạo Health monitor
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.08.PNG">
+- Sau khi tạo thành công
 <img src="https://github.com/lean15998/Openstack/blob/main/images/10.09.PNG">
