--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -113,14 +113,48 @@
 	- Nếu một chính sách mới được tạo với một vị trí trùng với chính sách hiện có, thì chính sách mới sẽ được chèn vào vị trí đấy, đẩy lùi chính sách cũ
 	- Nếu một chính sách được khởi tạo mà không chỉ định vị trí sẽ được append vào với vị trí list_range
 	- Nếu một chính sách trước nó bị xóa, các chính sách sau sẽ được đẩy lên một đơn vị 
-  
-# 3. Cài đặt Octavia
+# 3. Thuật toán sử dụng
+Các sẽ được request được phân phối bằng một trong các thuật toán cân bằng tải: Round Robin, Source IP, Least Connections.
+
+### Round Robin
+Round-Robin là thuật toán lựa chọn các máy chủ theo trình tự. Theo đó, Load Balancer sẽ bắt đầu đi từ máy chủ số 1 trong danh sách của nó ứng với yêu cầu đầu tiên. Tiếp đó, nó sẽ di chuyển dần xuống trong danh sách theo thứ tự và bắt đầu lại ở đầu trang khi đến máy chủ cuối cùng.
+Ví dụ:
+<ul>
+	<ul>
+		<li> Cấu hình một cụm Cluster bao gồm 03 máy chủ: A, B, C.
+		<li> Yêu cầu dịch vụ thứ nhất sẽ được gửi đến máy chủ A.
+		<li> Yêu cầu dịch vụ thứ hai sẽ được gửi đến máy chủ B.
+		<li> Yêu cầu dịch vụ thứ ba sẽ được gửi đến máy chủ C.
+		<li> Yêu cầu dịch vụ thứ tư sẽ lại được gửi cho máy chủ A…
+	</ul>
+</ul>
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.10.png">
+
+Nhược điểm: khi có 2 yêu cầu liên tục từ phía người dùng sẽ có thể được gửi vào 2 server khác nhau. Điều này làm tốn thời gian tạo thêm kết nối với server thứ 2 trong khi đó server thứ nhất cũng có thể trả lời được thông tin mà người dùng đang cần. Để giải quyết điều này, round robin thường được cài đặt cùng với các phương pháp duy trì session như sử dụng cookie.
+### Least Connections
+Các request sẽ được chuyển vào server có ít kết nối nhất trong hệ thống. Thuật toán này được coi như thuật toán động, vì nó phải đếm số kết nối đang hoạt động của server.
+Với một hệ thống có các server gần giống nhau về cấu hình, Least Connections có khả năng hoạt động tốt ngay cả khi tải của các kết nối biến thiên trong một khoảng lớn. Do đó nếu sử dụng Least Connections sẽ khắc phục được nhược điểm của Round-Robin.
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/10.11.jpg">
+
+Nhược điểm:
+<ul>
+	<ul>
+		<li> ▪ Trạng thái TIME_WAIT của TCP thường được đặt là 2 phút, trong 2 phút đó có một server bận rộn có thể nhận hàng chục ngàn kết nối liên tục.
+		<li>  Giả sử server A có khả năng xử lý gấp đôi server B, server A đang xử lý hàng ngàn những yêu cầu và giữ những yêu cầu này trong trạng thái TIME_WAIT của TCP. Trong khi đó server B cũng phải xử lý như server A nhưng vì cấu hình server B thấp hơn nên sẽ chậm hơn rất nhiều. Như vậy thuật toán LC hoạt động không tốt khi các server có cấu hình khác nhau.
+	</ul>
+</ul>
+
+### Source IP
+Các request từ một địa chỉ source IP luôn được hướng đến một instance.
+# 4. Cài đặt Octavia
 
 https://docs.openstack.org/octavia/latest/install/install.html
 
 
-# 4. Làm việc với Octavia
-## 4.1 Làm việc với Octavia qua CLI
+# 5. Làm việc với Octavia
+## 5.1 Làm việc với Octavia qua CLI
 - Tạo 2 VM gắn vào network shared
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/10.03.PNG">
