--- a/10.Octavia.md
+++ b/10.Octavia.md
@@ -505,7 +505,7 @@ Welcome to 192.168.233.192
 $curl 192.168.233.80
 Welcome to 192.168.233.7
 ```
--> Vì Pool sử dụng thuật toán Round-Robin nên các máy chủ web sẽ đƣợc chọn 
+-> Vì Pool sử dụng thuật toán Round-Robin nên các máy chủ web sẽ được chọn 
 tuần tự.
 
 ## 4.2 Làm việc với Octavia qua Dashboard
