--- a/08.Cinder.md
+++ b/08.Cinder.md
@@ -65,6 +65,8 @@
 
 ## 1.5. Luồng hoạt động của các thành phần trong Cinder
 
+### Tạo volume
+
 <img src="https://github.com/lean15998/Openstack/blob/main/images/08.12.png">
 
 Các bước khi tạo máy ảo:
@@ -78,7 +80,7 @@ Các bước khi tạo máy ảo:
 8. `cinder-api` nhận phản hồi từ hàng đợi và trả về thông tin về volume được tạo
 9. Client nhận thông tin bao gồm trạng thái của yêu cầu tạo, volume UUID(nếu thành công), và nhiều thông tin khác.
 
-
+### Gán volume cho instance
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/08.13.png">
 
